- Fixed-fixed-fixed the U:line branching thing made by codemastr
- Fixed a G: line-turn-into Z:line problem, reported by eYe-Man
- Added SJOIN (SJ3 only) instead of JOIN/MODE in /join and discovered a bug in 
  SJOIN code, that if the line doesnt have a " " appeneded, it wont take the
  last users or first for that sake. Hopefully patched SJ3 code for it
- Added OPT target OPT_SJB64 and OPT_NOT_SJB64
- Made SSL server<->server work, using __blocking__ sockets (this is only
  in connect moment thou) -stskeeps
- Removed 1.0 msg/s when not in HTM
- Fixed cutoff server infos in synch
- Added so /gline and /shun accepts time periods in 1d2h3s etc. a recode of
  some potvin stuff
- Added so blocking is only effective when SSL_connect()'ing
- Fixed a couple of SJOIN/Link problems detected by Curt|s
- Changed some stuff with SSL, you may want to seperate server.pem into
  server.key.pem and server.cert.pem (or "rm Makefile" and "./Config")
- Fixed a couple of SJOIN/Link problems detected by Curt|s
- Made /stats C show SSL/Zip flags
- Fixed the Stskeeps "mass G:line on /rehash" (tm) bug
- Removed last point of confusion in ALN/NS
- Removed CRYPTOIRCD (replaced by SSL)
- Added support for some more SJB64 stuff
- Added some more support for some even more SJB64 stuff
- Added some network files and even more network files
- Fixed some copyright stuff in ssl.c
- Fixed a /map problem
- Updated doc/conf.doc and doc/example.conf
- Fixed a bug where /map showed U:lines while HIDE_ULINES was set
- Removed "on network" in /whois oper
- Added code to makenet to stop fake submissions
- Fixed some /whois channels code, which may break +I /whois
- Fixed overflow in SJOIN
- Added SMO *, all users
- If a +r user is /who'ed, it shows a "r" in flags field. Suggested by
  Mirar.
- Fixed a typo in ssl.c
- Added SICI information, Donation information, fixed a ./Config problem
  overwriting certs ..
- Added hatblade's files
- Added some credits
- Fixed a real bad  /whois bug, reported by BiGi