@@ -214,3 +214,4 @@
 - Added hatblade's files
 - Added some credits
 - Fixed a real bad  /whois bug, reported by BiGi
+- Fixed a problem with /sajoin .. atleast possible
